test/visibility/import/enablesUnqualified/multipleUnqualified/useAndImport-useExcept2c.good
useAndImport-useExcept2c.chpl:21: In function 'main':
useAndImport-useExcept2c.chpl:22: error: unresolved call 'foo()'
useAndImport-useExcept2c.chpl:22: note: because no functions named foo found in scope
